--- a/light-tool/public/manifest.json
+++ b/light-tool/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Light Tool",
+  "name": "Light up your face",
   "icons": [
     {
       "src": "favicon.ico",
